# Python-Libraries

./: .gitignore  README.md  meta.yaml  pyproject.toml  setup.py
general/: config.py
matej/: __init__.py  argparse.py  callable.py  cli.py  collections.py  colour.py  config.py  enum.py  parallel.py  regedit.py  string.py  strings.py
matej/gui/: pyqt.py
matej/logging/: __init__.py  formatters.py  loggers.py
matej/math/: __init__.py  calculator.py
math/: calculator.py  utils.py
mylibs/: calculator.py  collections.py  general.py  math.py  string.py  test.py
scripts/: send_email.py
src/matej/: __init__.py  archive.py  argparse.py  callable.py  cli.py  collections.py  config.py  enum.py  re.py  regedit.py  string.py  web.py
src/matej/gui/: pyqt.py  tkinter.py
src/matej/logging/: filters.py  handlers.py  loggers.py
src/matej/math/: __init__.py
src/matej/nn/: torch.py
src/matej/web/: __init__.py  cloud.py  email.py
tests/: test_collections.py
